# Tidycraft

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVLOG.md  README.md  README.zh-CN.md  REDESIGN.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tidycraft-development-plan.md  tsconfig.json  tsconfig.node.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: analyzer-rules.md  competitor-analysis.md  development.md
examples/: tidycraft.example.toml
scripts/: sync-version.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  fs_atomic.rs  godot.rs  lib.rs  main.rs  meta_sidecar.rs  project.rs  scanner.rs  tags.rs  thumbnail.rs  undo.rs  unity.rs  unreal.rs  watcher.rs
src-tauri/src/analyzer/: mod.rs  rule_suggest.rs  tag_suggest.rs
src-tauri/src/analyzer/rules/: audio.rs  config_template.rs  dcc_source.rs  duplicate.rs  missing_reference.rs  mod.rs  model.rs  naming.rs  pbr_set.rs  texture.rs  texture_colorspace.rs
src-tauri/src/git/: mod.rs
src-tauri/src/llm/: cache.rs  claude.rs  cost.rs  learning.rs  mod.rs  ollama.rs  openai.rs  project_meta.rs  prompts.rs  rule_store.rs  sampler.rs
src/components/: AIAnalyzeModal.tsx  AIResultPanel.tsx  AITagPanel.tsx  AdvancedFilters.tsx  AssetGalleryView.tsx  AssetList.tsx  AssetListView.tsx  AssetPreview.tsx  AudioPlayer.tsx  BatchRenameDialog.tsx  CommandPalette.tsx  ContextMenu.tsx  DccSourceBadge.tsx  DeleteConfirmDialog.tsx  DependencyGraphModal.tsx  DirectoryTree.tsx  EmptyState.tsx  GitStatusBadge.tsx  Header.tsx  ImageLightbox.tsx  IssueList.tsx  LearnReviewPanel.tsx  LearnSetupModal.tsx  ModalShell.tsx  ModelLightbox.tsx  ModelViewer3D.tsx  MoveCopyDialog.tsx  NamingFixDialog.tsx  ProjectList.tsx  ProjectSwitcher.tsx  RenameDialog.tsx  SearchHistory.tsx  SettingsModal.tsx  Sidebar.tsx  StatsDashboard.tsx  StatusBar.tsx  TagFilterPanel.tsx  TagManager.tsx  TagSelector.tsx  Toasts.tsx  (+1 more)
src/hooks/: useKeyboardShortcuts.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/lib/: dccSource.ts  exportFile.ts  modelUrlResolver.ts  pathUtils.ts  platform.ts  thumbnailCache.ts  utils.ts
src/stores/: columnStore.ts  projectStore.ts  recentsStore.ts  searchHistoryStore.ts  selectionStore.ts  sessionStore.ts  settingsStore.ts  tagsStore.ts  themeStore.ts  toastStore.ts  uiStore.ts
src/styles/: globals.css  redesign-components.css  redesign-tokens-v2.css  redesign-tokens.css
src/types/: asset.ts
