[package]
name = "tidycraft"
version = "0.0.1"
description = "Game asset management tool"
authors = ["Tidycraft Team"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "tidycraft_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tga"] }
walkdir = "2"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt"] }
gltf = "1"
tobj = "4"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "ogg", "wav", "pcm", "vorbis"] }
serde_yaml = "0.9"
sha2 = "0.10"
base64 = "0.22"
parking_lot = "0.12"
dirs = "5"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
