[package]
name = "tidycraft"
version = "0.8.0"
description = "Game asset management tool"
authors = ["Tidycraft Team"]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
homepage = "https://github.com/Lynthar/Tidycraft"
repository = "https://github.com/Lynthar/Tidycraft"

[lib]
name = "tidycraft_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# No `devtools` feature: debug builds get the inspector automatically
# (tauri enables it under `debug_assertions`, and lib.rs's setup hook
# auto-opens it there); the feature's only effect was compiling the
# inspector into RELEASE builds, where it exposed localStorage (and the
# plaintext API key) to anyone at the machine. Re-add temporarily if a
# production-build issue ever needs on-site inspection.
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tga", "tiff", "webp", "hdr", "exr"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
gltf = "1"
tobj = "4"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "ogg", "wav", "pcm", "vorbis"] }
sha2 = "0.10"
base64 = "0.22"
parking_lot = "0.12"
dirs = "5"
toml = "0.8"
# Round-trip TOML editing that preserves comments + formatting. Used by
# `llm::project_meta::write_back` so the LearnSetupModal can persist
# theme/goal back into tidycraft.toml without clobbering the user's
# inline comments. The plain `toml` crate above is serde-only and would
# lose them. cargo itself uses toml_edit for the same reason.
toml_edit = "0.22"
git2 = { version = "0.20", features = ["vendored-openssl"] }
ignore = "0.4"
globset = "0.4"
# File-identity comparison (dev+inode / Windows file index) for the rename
# "target already exists" guards: a case-only rename's target resolves to the
# source itself on case-insensitive filesystems and must be allowed, while a
# genuine case-variant *collision* on case-sensitive filesystems must be
# rejected. Already in the tree transitively via `ignore` → `walkdir`.
same-file = "1"
# zlib inflate for the PNG iCCP chunk: the embedded ICC profile is parsed to
# tell linear from sRGB-encoded textures (scanner::classify_icc_profile)
# instead of blindly assuming any profile means sRGB. Pure Rust, already in
# the tree transitively via the `png` decoder.
miniz_oxide = "0.8"
# `default-features = false` drops the unicode tables we don't need (asset
# paths are ASCII-dominant; learned-regex rules don't use \p{...} classes).
# Saves ~1MB binary and a few seconds compile. `std` feature is required —
# without it the crate is no_std-only and won't expose Regex::new at all.
regex = { version = "1", default-features = false, features = ["std", "perf"] }
chrono = "0.4"
rayon = "1.10"
uuid = { version = "1", features = ["v4"] }
notify = "6"
notify-debouncer-full = "0.3"
trash = "5"
fbxcel-dom = "0.0"
mp4 = "0.14"
matroska-demuxer = "0.7"
# LLM tagging: HTTP client for Anthropic / OpenAI / Ollama vision APIs.
# rustls-tls is intentional (avoids dragging in OpenSSL on Windows builds);
# json feature gives us .json() / Serialize bodies without manual serde wiring.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
# `filetime` lets the dcc_source analyzer's tests precisely control
# file mtimes, which is otherwise stuck at the OS clock + write-syscall
# resolution (varies wildly across filesystems and is too coarse for
# sub-second pairing logic). Cross-platform; production code doesn't
# touch it.
filetime = "0.2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
